--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Hero from '@/components/Hero.astro';
 import BindingNumber from '@/components/BindingNumber.astro';
 import Layout from '@/layouts/Layout.astro';
+import BindingRange from '@/components/BindingRange.astro';
 ---
 
 <Layout>
   <Hero />
   <BindingNumber />
+  <BindingRange />
 </Layout>
