--- a/src/components/BindingRange.astro
+++ b/src/components/BindingRange.astro
@@ -1,23 +1,23 @@
 ---
 import { getUrlOfTheComponent } from '@/utils/functions';
 const fileAnchor = getUrlOfTheComponent({ theURL: import.meta.url });
-const containerClassName = `binding-number-container-and-text`
+const containerClassName = `binding-range`;
 ---
 
 <section class=`am-section ${containerClassName}`>
-  <a class='title-of-section' href={fileAnchor} target='_blank'>#1</a>
+  <a class='title-of-section' href={fileAnchor} target='_blank'>#2</a>
 </section>
 
 <script>
   import { $ } from '@/utils/functions';
   import { Pane } from 'tweakpane';
-  const container = $('.binding-number-container-and-text') as HTMLElement;
+  const container = $('.binding-range') as HTMLElement;
   const PARAMS = {
-    Number: 0.5,
-    Text: 'Hello'
+    speed: 0.5
   };
   const pane = new Pane({ container });
   pane.element.classList.add('my-pane');
-  pane.addBinding(PARAMS, 'Number');
-  pane.addBinding(PARAMS, 'Text');
+  pane.addBinding(PARAMS, 'speed', { min: 0, max: 100 });
 </script>
+
+
