--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,17 +59,6 @@ h5 {
   font-family: 'AnotherDanger';
 }
 
-.title-of-section {
-  font-family: 'AnotherDanger';
-  text-decoration: none;
-  position: absolute;
-  bottom: 3vmax;
-  left: 3vmax;
-  color: #e9e9e9;
-  mix-blend-mode: overlay;
-  font-size: 3vmax;
-}
-
 /***************************SCROLL***************************/
 
 body::-webkit-scrollbar {
@@ -87,5 +76,30 @@ body::-webkit-scrollbar-thumb {
 @supports not selector(::-webkit-scrollbar) {
   body {
     scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
+}
+
+/***************************PANE***************************/
+.title-of-section {
+  font-family: 'AnotherDanger';
+  text-decoration: none;
+  position: absolute;
+  bottom: 3vmax;
+  left: 3vmax;
+  color: #e9e9e9;
+  mix-blend-mode: overlay;
+  font-size: 3vmax;
+}
+
+.am-section {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  place-content: center;
+  border-block: 0.1vmax solid #fffa;
+
+  .my-pane {
+    width: fit-content;
   }
 }
