--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Hero from '@/components/Hero.astro';
 import BindingNumber from '@/components/BindingNumber.astro';
 import Layout from '@/layouts/Layout.astro';
 import BindingRange from '@/components/BindingRange.astro';
+import BindingRangeWithStep from '@/components/BindingRangeWithStep.astro';
 ---
 
 <Layout>
   <Hero />
   <BindingNumber />
   <BindingRange />
+  <BindingRangeWithStep />
 </Layout>
