--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import BindingNumber from '@/components/BindingNumber.astro';
 import Layout from '@/layouts/Layout.astro';
 import BindingRange from '@/components/BindingRange.astro';
 import BindingRangeWithStep from '@/components/BindingRangeWithStep.astro';
+import BindingNumberList from '@/components/BindingNumberList.astro';
 ---
 
 <Layout>
@@ -11,4 +12,5 @@ import BindingRangeWithStep from '@/components/BindingRangeWithStep.astro';
   <BindingNumber />
   <BindingRange />
   <BindingRangeWithStep />
+  <BindingNumberList />
 </Layout>
