--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,8 @@ import BindingNumber from '@/components/BindingNumber.astro';
 import Layout from '@/layouts/Layout.astro';
 import BindingRange from '@/components/BindingRange.astro';
 import BindingRangeWithStep from '@/components/BindingRangeWithStep.astro';
-import BindingNumberList from '@/components/BindingNumberList.astro';
+import BindingNumberAndStringList from '@/components/BindingNumberAndStringList.astro';
+import BindingFormatter from '@/components/BindingFormatter.astro';
 ---
 
 <Layout>
@@ -12,5 +13,6 @@ import BindingNumberList from '@/components/BindingNumberList.astro';
   <BindingNumber />
   <BindingRange />
   <BindingRangeWithStep />
-  <BindingNumberList />
+  <BindingNumberAndStringList />
+  <BindingFormatter />
 </Layout>
