--- a/src/components/BindingFormatter.astro
+++ b/src/components/BindingFormatter.astro
@@ -1,27 +1,27 @@
 ---
 import { getUrlOfTheComponent } from '@/utils/functions';
 const fileAnchor = getUrlOfTheComponent({ theURL: import.meta.url });
-const containerClassName = `binding-number-list`;
+const containerClassName = `binding-formatter`;
 ---
 
 <section class=`am-section ${containerClassName}`>
-  <a class='title-of-section' href={fileAnchor} target='_blank'>#4</a>
+  <a class='title-of-section' href={fileAnchor} target='_blank'>#5</a>
 </section>
 
 <script>
   import { $ } from '@/utils/functions';
   import { Pane } from 'tweakpane';
-  const container = $('.binding-number-list') as HTMLElement;
+  const container = $('.binding-formatter') as HTMLElement;
   const PARAMS = {
-    quality: 0
+    peso: 0,
+    ProjectNumber: 1
   };
   const pane = new Pane({ container });
   pane.element.classList.add('my-pane');
-  pane.addBinding(PARAMS, 'quality', {
-    options: {
-      low: 0,
-      medium: 50,
-      high: 100
-    }
+  pane.addBinding(PARAMS, 'peso', {
+    format: v => v.toFixed(6)
+  });
+  pane.addBinding(PARAMS, 'ProjectNumber', {
+    format: v => v.toString().padStart(6, '0')
   });
 </script>
