--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Hero from '@/components/Hero.astro';
-import BindingNumber from '@/components/BindingNumber.astro';
+import BindingNumberAndStringAndBoolean from '@/components/BindingNumberAndStringAndBoolean.astro';
 import Layout from '@/layouts/Layout.astro';
 import BindingRange from '@/components/BindingRange.astro';
 import BindingRangeWithStep from '@/components/BindingRangeWithStep.astro';
@@ -10,7 +10,7 @@ import BindingFormatter from '@/components/BindingFormatter.astro';
 
 <Layout>
   <Hero />
-  <BindingNumber />
+  <BindingNumberAndStringAndBoolean />
   <BindingRange />
   <BindingRangeWithStep />
   <BindingNumberAndStringList />
