--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import BindingRange from '@/components/BindingRange.astro';
 import BindingRangeWithStep from '@/components/BindingRangeWithStep.astro';
 import BindingNumberAndStringList from '@/components/BindingNumberAndStringList.astro';
 import BindingFormatter from '@/components/BindingFormatter.astro';
+import BindingColor from '@/components/BindingColor.astro';
 ---
 
 <Layout>
@@ -15,4 +16,5 @@ import BindingFormatter from '@/components/BindingFormatter.astro';
   <BindingRangeWithStep />
   <BindingNumberAndStringList />
   <BindingFormatter />
+  <BindingColor />
 </Layout>
