--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import BindingRangeWithStep from '@/components/BindingRangeWithStep.astro';
 import BindingNumberAndStringList from '@/components/BindingNumberAndStringList.astro';
 import BindingFormatter from '@/components/BindingFormatter.astro';
 import BindingColor from '@/components/BindingColor.astro';
+import BindingPoint from '@/components/BindingPoint.astro';
 ---
 
 <Layout>
@@ -17,4 +18,5 @@ import BindingColor from '@/components/BindingColor.astro';
   <BindingNumberAndStringList />
   <BindingFormatter />
   <BindingColor />
+  <BindingPoint />
 </Layout>
