--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import BindingNumberAndStringList from '@/components/BindingNumberAndStringList.
 import BindingFormatter from '@/components/BindingFormatter.astro';
 import BindingColor from '@/components/BindingColor.astro';
 import BindingPoint from '@/components/BindingPoint.astro';
+import BindingMonitor from '@/components/BindingMonitor.astro';
 ---
 
 <Layout>
@@ -19,4 +20,5 @@ import BindingPoint from '@/components/BindingPoint.astro';
   <BindingFormatter />
   <BindingColor />
   <BindingPoint />
+  <BindingMonitor />
 </Layout>
