--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import BindingFormatter from '@/components/BindingFormatter.astro';
 import BindingColor from '@/components/BindingColor.astro';
 import BindingPoint from '@/components/BindingPoint.astro';
 import BindingMonitor from '@/components/BindingMonitor.astro';
+import Folder from '@/components/Folder.astro';
 ---
 
 <Layout>
@@ -21,4 +22,5 @@ import BindingMonitor from '@/components/BindingMonitor.astro';
   <BindingColor />
   <BindingPoint />
   <BindingMonitor />
+  <Folder />
 </Layout>
