--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import BindingColor from '@/components/BindingColor.astro';
 import BindingPoint from '@/components/BindingPoint.astro';
 import BindingMonitor from '@/components/BindingMonitor.astro';
 import Folder from '@/components/Folder.astro';
+import Button from '@/components/Button.astro';
 ---
 
 <Layout>
@@ -23,4 +24,5 @@ import Folder from '@/components/Folder.astro';
   <BindingPoint />
   <BindingMonitor />
   <Folder />
+  <Button />
 </Layout>
