--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import BindingPoint from '@/components/BindingPoint.astro';
 import BindingMonitor from '@/components/BindingMonitor.astro';
 import Folder from '@/components/Folder.astro';
 import Button from '@/components/Button.astro';
+import Tab from '@/components/Tab.astro';
 ---
 
 <Layout>
@@ -25,4 +26,5 @@ import Button from '@/components/Button.astro';
   <BindingMonitor />
   <Folder />
   <Button />
+  <Tab />
 </Layout>
