--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import BindingMonitor from '@/components/BindingMonitor.astro';
 import Folder from '@/components/Folder.astro';
 import Button from '@/components/Button.astro';
 import Tab from '@/components/Tab.astro';
+import Blades from '@/components/Blades.astro';
 ---
 
 <Layout>
@@ -27,4 +28,5 @@ import Tab from '@/components/Tab.astro';
   <Folder />
   <Button />
   <Tab />
+  <Blades />
 </Layout>
