--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import Folder from '@/components/Folder.astro';
 import Button from '@/components/Button.astro';
 import Tab from '@/components/Tab.astro';
 import Blades from '@/components/Blades.astro';
+import ThemeBuilder from '@/components/ThemeBuilder.astro';
 ---
 
 <Layout>
@@ -29,4 +30,5 @@ import Blades from '@/components/Blades.astro';
   <Button />
   <Tab />
   <Blades />
+  <ThemeBuilder />
 </Layout>
