--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,7 @@ import Button from '@/components/Button.astro';
 import Tab from '@/components/Tab.astro';
 import Blades from '@/components/Blades.astro';
 import ThemeBuilder from '@/components/ThemeBuilder.astro';
+import Events from '@/components/Events.astro';
 ---
 
 <Layout>
@@ -31,4 +32,5 @@ import ThemeBuilder from '@/components/ThemeBuilder.astro';
   <Tab />
   <Blades />
   <ThemeBuilder />
+  <Events />
 </Layout>
