--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import Tab from '@/components/Tab.astro';
 import Blades from '@/components/Blades.astro';
 import ThemeBuilder from '@/components/ThemeBuilder.astro';
 import Events from '@/components/Events.astro';
+import FPS from '@/components/FPS.astro';
 ---
 
 <Layout>
@@ -33,4 +34,5 @@ import Events from '@/components/Events.astro';
   <Blades />
   <ThemeBuilder />
   <Events />
+  <FPS />
 </Layout>
