--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import Blades from '@/components/Blades.astro';
 import ThemeBuilder from '@/components/ThemeBuilder.astro';
 import Events from '@/components/Events.astro';
 import FPS from '@/components/FPS.astro';
+import Interval from '@/components/Interval.astro';
 ---
 
 <Layout>
@@ -35,4 +36,5 @@ import FPS from '@/components/FPS.astro';
   <ThemeBuilder />
   <Events />
   <FPS />
+  <Interval />
 </Layout>
