--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,7 @@ import ThemeBuilder from '@/components/ThemeBuilder.astro';
 import Events from '@/components/Events.astro';
 import FPS from '@/components/FPS.astro';
 import Interval from '@/components/Interval.astro';
+import RadioGrid from '@/components/RadioGrid.astro';
 ---
 
 <Layout>
@@ -37,4 +38,5 @@ import Interval from '@/components/Interval.astro';
   <Events />
   <FPS />
   <Interval />
+  <RadioGrid />
 </Layout>
