--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import Events from '@/components/Events.astro';
 import FPS from '@/components/FPS.astro';
 import Interval from '@/components/Interval.astro';
 import RadioGrid from '@/components/RadioGrid.astro';
+import ButtonGrid from '@/components/ButtonGrid.astro';
 ---
 
 <Layout>
@@ -39,4 +40,5 @@ import RadioGrid from '@/components/RadioGrid.astro';
   <FPS />
   <Interval />
   <RadioGrid />
+  <ButtonGrid />
 </Layout>
