--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ import FPS from '@/components/FPS.astro';
 import Interval from '@/components/Interval.astro';
 import RadioGrid from '@/components/RadioGrid.astro';
 import ButtonGrid from '@/components/ButtonGrid.astro';
+import CubicBezier from '@/components/CubicBezier.astro';
 ---
 
 <Layout>
@@ -41,4 +42,5 @@ import ButtonGrid from '@/components/ButtonGrid.astro';
   <Interval />
   <RadioGrid />
   <ButtonGrid />
+  <CubicBezier />
 </Layout>
