--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import Interval from '@/components/Interval.astro';
 import RadioGrid from '@/components/RadioGrid.astro';
 import ButtonGrid from '@/components/ButtonGrid.astro';
 import CubicBezier from '@/components/CubicBezier.astro';
+import CameraKit from '@/components/CameraKit.astro';
 ---
 
 <Layout>
@@ -43,4 +44,5 @@ import CubicBezier from '@/components/CubicBezier.astro';
   <RadioGrid />
   <ButtonGrid />
   <CubicBezier />
+  <CameraKit />
 </Layout>
