--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import '@/styles/global.css';
 import { baseUrl } from '@/utils/functions';
-const title = 'Tweakpane Summary'
+const title = 'Tweakpane 20 Exercises'
 const favicon = baseUrl('/assets/favicon.webp');
 ---
 
