--- a/src/components/BindingRange.astro
+++ b/src/components/BindingRange.astro
@@ -5,7 +5,11 @@ const containerClassName = `binding-range`;
 ---
 
 <section class=`am-section ${containerClassName}`>
-  <a class='title-of-section' href={fileAnchor} target='_blank'>#2</a>
+  <a
+    class='title-of-section'
+    href={`https://github.com/20essentials/project-1168/blob/main/src/components/BindingRange.astro`}
+    target='_blank'>#2</a
+  >
 </section>
 
 <script>
@@ -19,5 +23,3 @@ const containerClassName = `binding-range`;
   pane.element.classList.add('my-pane');
   pane.addBinding(PARAMS, 'speed', { min: 0, max: 100 });
 </script>
-
-
