--- a/src/components/BindingRangeWithStep.astro
+++ b/src/components/BindingRangeWithStep.astro
@@ -5,7 +5,11 @@ const containerClassName = `binding-range-with-step`;
 ---
 
 <section class=`am-section ${containerClassName}`>
-  <a class='title-of-section' href={fileAnchor} target='_blank'>#3</a>
+  <a
+    class='title-of-section'
+    href={`https://github.com/20essentials/project-1168/blob/main/src/components/BindingRangeWithStep.astro`}
+    target='_blank'>#3</a
+  >
 </section>
 
 <script>
