--- a/src/components/BindingNumberAndStringAndBoolean.astro
+++ b/src/components/BindingNumberAndStringAndBoolean.astro
@@ -5,7 +5,11 @@ const containerClassName = `container-binding-number-and-string-and-boolean`;
 ---
 
 <section class=`am-section ${containerClassName}`>
-  <a class='title-of-section' href={fileAnchor} target='_blank'>#1</a>
+  <a
+    class='title-of-section'
+    href={`https://github.com/20essentials/project-1168/blob/main/src/components/BindingNumberAndStringAndBoolean.astro`}
+    target='_blank'>#1</a
+  >
 </section>
 
 <script>
