--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -5,7 +5,7 @@ const containerClassName = `container-events`;
 ---
 
 <section class=`am-section ${containerClassName}`>
-  <a class='title-of-section' href={fileAnchor} target='_blank'>#14</a>
+  <a class='title-of-section' href={`https://github.com/20essentials/project-1168/blob/main/src/components/Events.astro`} target='_blank'>#14</a>
 </section>
 
 <script>
